--- a/environment_oscar.yml
+++ b/environment_oscar.yml
@@ -77,6 +77,7 @@ dependencies:
   #- yaml=0.1.7=hc338f04_2
   #- zlib=1.2.11=h1de35cc_3
   - pip:
+    - gensim
     - afinn==0.1
     - attrs==19.1.0
     - autopep8==1.4.4
