--- a/environment_oscar.yml
+++ b/environment_oscar.yml
@@ -1,4 +1,4 @@
-name: Gene_study
+name: marijuana_study
 channels:
   - conda-forge
   - pytorch
@@ -77,7 +77,6 @@ dependencies:
   #- yaml=0.1.7=hc338f04_2
   #- zlib=1.2.11=h1de35cc_3
   - pip:
-    - gensim
     - afinn==0.1
     - attrs==19.1.0
     - autopep8==1.4.4
@@ -96,6 +95,7 @@ dependencies:
     - eth-utils==1.6.0
     - filelock==3.0.12
     - future==0.18.2
+    - gensim
     - html-parser==0.2
     - idna==2.8
     - joblib==0.14.1
@@ -108,6 +108,7 @@ dependencies:
     - pandas==1.0.3
     - pathlib2==2.3.3
     - pillow==7.1.2
+    - pyahocorasick
     - plac==0.9.6
     - ply==3.11
     - preshed==2.0.1
@@ -147,7 +148,6 @@ dependencies:
     - urllib3==1.25.3
     - wasabi==0.2.2
     - zstandard==0.11.1
-
 
 
 
